refactor: changed absolute import to relative import

--- a/generators/templates/stories.tsx.hbs
+++ b/generators/templates/stories.tsx.hbs
@@ -1,4 +1,4 @@
-import { Story } from '@storybook/react';
+import { Story } from '@storybook/react'
 import {{pascalCase name}}, { {{pascalCase name}}Props } from '.'
 
 const Template: Story<{{pascalCase name}}Props> = args => <{{pascalCase name}} {...args} />
