--- a/generators/templates/Component.tsx.hbs
+++ b/generators/templates/Component.tsx.hbs
@@ -1,9 +1,9 @@
-import * as S from 'components/{{pascalCase name}}/styles'
+import * as S from './styles'
 
 const {{pascalCase name}} = () => (
-<S.Wrapper>
+  <S.Wrapper>
     <h1>{{pascalCase name}}</h1>
-</S.Wrapper>
+  </S.Wrapper>
 )
 
 export default {{pascalCase name}}
