--- a/src/styles/loading.css
+++ b/src/styles/loading.css
@@ -8,7 +8,7 @@
   width: 100%;
   height: 100vh;
   position: fixed;
-  background-color: #ffffff99;
+  background-color: #13171f;
   left: 0;
   top: 0;
 }
@@ -22,7 +22,7 @@
   left: 0;
 
   width: 100%;
-  height: 0.5rem;
+  height: 0.4rem;
 }
 
 #nprogress .peg {
@@ -51,8 +51,8 @@
   width: 9rem;
   height: 9rem;
   box-sizing: border-box;
-  background-color: #ffffffc4;
-  box-shadow: 0 0 30rem 25rem #ffffffc4;
+  background-color: #13171f;
+  box-shadow: 0 0 30rem 25rem #13171f;
 
   border: solid 0.2rem transparent;
   border-top-color: #F83B91;
